# FractalsLaba2

./: README.md  main.py  pyproject.toml
DiamondSquare/: DiamondSquare.py
MidpointDisplacement/: MidpointDisplacement.py
