[tool.poetry]
name = "laba2"
version = "0.1.0"
description = ""
authors = ["Vadim Shubin <liliaa23ar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pygame = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
